--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <section class="home">
         <div class="background-img">
-            <img src="./images/back.jpg" alt="">
+            <img src="./back.jpg" alt="">
         </div>
         <div class="image-container">
             <img src="./images/Rajesh1.jpg" alt="" class="imge" id="rajesh">
