--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <img src="back.jpg" alt="">
         </div>
         <div class="image-container">
-            <img src="./images/Rajesh1.jpg" alt="" class="imge" id="rajesh">
+            <img src="Rajesh1.jpg" alt="" class="imge" id="rajesh">
         </div>
         <div class="controls">
-            <span class="img-btn active" data-src="./images/Rajesh1.jpg"></span>
-            <span class="img-btn" data-src="./images/Raghu1.jpg"></span>
-            <span class="img-btn" data-src="./images/teja1.jpg"></span>
-            <span class="img-btn" data-src="./images/venkat1.jpg"></span>
+            <span class="img-btn active" data-src="Rajesh1.jpg"></span>
+            <span class="img-btn" data-src="Raghu1.jpg"></span>
+            <span class="img-btn" data-src="teja1.jpg"></span>
+            <span class="img-btn" data-src="venkat1.jpg"></span>
         </div>
         <div class="content">
             <h3>the mega dream</h3>
